# rust-language-rpg

./: Cargo.toml  langrpg.rs
data/: Hiragana.txt
src/: langrpg.rs  main.rs
