[package]
name = "languagerpg"
version = "0.1.0"
authors = ["Leah Hicks <lhicks16@emich.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.15.0"
textwrap = { version = "0.11", features = ["term_size"] }
termion = "*"
